objects/EVC__c/EVC__c.object-meta.xml
<CustomObject>
    <label>EVC</label>
    <nameField>
        <label>EVC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EVCs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>