objects/EVC__c/fields/BE_CoS_0__c.field-meta.xml
<CustomField>
    <fullName>BE_CoS_0__c</fullName>
    <label>BE/CoS 0</label>
    <length>255</length>
    <type>Text</type>
</CustomField>