objects/EVC__c/fields/Best_Effort_CoS_Mbps__c.field-meta.xml
<CustomField>
    <fullName>Best_Effort_CoS_Mbps__c</fullName>
    <label>Best Effort CoS (Mbps)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>