objects/EVC__c/fields/Business_Class_CoS_Mbps__c.field-meta.xml
<CustomField>
    <fullName>Business_Class_CoS_Mbps__c</fullName>
    <inlineHelpText>Total of Real Time, Business Class and Standard Class must equal CIR on Service Agreement</inlineHelpText>
    <label>Business Class CoS (Mbps)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>