objects/EVC__c/fields/CE_VLAN_ID_s_EVPL_only__c.field-meta.xml
<CustomField>
    <fullName>CE_VLAN_ID_s_EVPL_only__c</fullName>
    <inlineHelpText>All standard VLANs (4096) are available for use by the customer except
0, 1, 500, 1002, 1003, 1004, 1005, 1998, and 4000 thru 4096 which are reserved for Integra uses.</inlineHelpText>
    <label>Cust-provided VLAN ID Tags (Tag ranges)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>