objects/EVC__c/fields/Cloud_Connect_Location__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Connect_Location__c</fullName>
    <description>Locations of third-party data centers used as part of Cloud Connect product offering.</description>
    <inlineHelpText>Locations of third-party data centers used as part of Cloud Connect product offering. Select one.</inlineHelpText>
    <label>Cloud Connect Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Las Vegas, NV</fullName>
            </value>
            <value>
                <fullName>Los Angeles, CA</fullName>
            </value>
            <value>
                <fullName>San Jose, CA</fullName>
            </value>
            <value>
                <fullName>Seattle, WA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>