objects/EVC__c/fields/CoS_Mapping_Source__c.field-meta.xml
<CustomField>
    <fullName>CoS_Mapping_Source__c</fullName>
    <inlineHelpText>How will Integra identify the CoS value on customer’s frames in order to prioritize?</inlineHelpText>
    <label>CoS Mapping Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DSCP</fullName>
            </value>
            <value>
                <fullName>802.1p</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>