objects/EVC__c/fields/CS2_CoS2__c.field-meta.xml
<CustomField>
    <fullName>CS2_CoS2__c</fullName>
    <label>CS2/CoS2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>