objects/EVC__c/fields/CS3_CoS3__c.field-meta.xml
<CustomField>
    <fullName>CS3_CoS3__c</fullName>
    <label>CS3/CoS3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>