objects/EVC__c/fields/CS4_CoS4__c.field-meta.xml
<CustomField>
    <fullName>CS4_CoS4__c</fullName>
    <label>CS4/CoS4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>