objects/EVC__c/fields/EF_CoS5__c.field-meta.xml
<CustomField>
    <fullName>EF_CoS5__c</fullName>
    <label>EF/CoS5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>