objects/EVC__c/fields/EVC__c.field-meta.xml
<CustomField>
    <fullName>EVC__c</fullName>
    <label>EVC #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>