objects/EVC__c/fields/EVC_Level__c.field-meta.xml
<CustomField>
    <fullName>EVC_Level__c</fullName>
    <label>EVC Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>