objects/EVC__c/fields/Remote_Site__c.field-meta.xml
<CustomField>
    <fullName>Remote_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Remote Site</label>
    <referenceTo>Remote_Site__c</referenceTo>
    <relationshipName>EVCs</relationshipName>
    <type>Lookup</type>
</CustomField>