objects/EVC__c/fields/VLAN_Appearance_of_Remote_at_Agg_Site__c.field-meta.xml
<CustomField>
    <fullName>VLAN_Appearance_of_Remote_at_Agg_Site__c</fullName>
    <inlineHelpText>Required for EVPL remote sites.  If not provided by customer, Integra selects next available and will proved to customer</inlineHelpText>
    <label>VLAN Appearance of Remote at Agg Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>